Bugs and UI
Fixed layout bugs, and made links easier to see when you hover.

--- a/Project_05_J-Tattoo/style.css
+++ b/Project_05_J-Tattoo/style.css
@@ -5,13 +5,10 @@
 
 html {
   scroll-behavior: smooth;
-  white-space: nowrap;
-  background-color: black;
-  
 }
 body {
   font-family: sans-serif;
-  
+  background-color: rgb(0, 0, 0);
 }
 
 #nav-bar {
@@ -22,8 +19,15 @@ body {
 .navbar {
   background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
   padding: 0 !important;
-  opacity: 0.8;
+  opacity: 0.5;
   height: 40px;
+}
+.navbar:hover {
+  opacity: 0.8;
+}
+a:hover {
+  color: rgb(255, 255, 0);
+  opacity: 0.8;
 }
 .navbar-brand {
   height: auto;
@@ -48,6 +52,7 @@ body {
 
 .navbar-toggler {
   outline: none !important;
+  margin-right: 10px;
 }
 .navbar-toggler:focus,
 .navbar-toggler:active,
@@ -85,7 +90,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-.logoName{
+.logoName {
   z-index: 5;
   position: absolute;
   width: 60%;
@@ -148,7 +153,7 @@ body {
   margin-bottom: -7px;
   background-attachment: fixed;
   background-position: left top;
-  background-size: 100% 750px;
+  background-size: 1000% 750px;
   color: white;
 }
 /*--section 1-*/
@@ -192,21 +197,15 @@ ul {
   justify-content: center;
   padding: 0;
 }
-/*
-.container-fluid {
+.col-md-12 {
   padding: 0;
-  margin-right: 10px;
-}*/
-
-
-
-
+}
 
 /*- Gallery -*/
 
 .photo-gallery {
   color: #313437;
-  background-color: rgb(33, 31, 31);  
+  background-color: rgb(33, 31, 31);
 }
 
 .photo-gallery p {
@@ -230,17 +229,13 @@ ul {
 }
 
 @media (max-width: 740px) {
-  li{
+  li {
     margin: auto;
   }
-  .navbar-nav{
+  .navbar-nav {
     background-color: black;
   }
 }
-
-
-
-
 
 .photo-gallery .intro {
   font-size: 16px;
